<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp"
    android:elevation="5dp">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:id="@+id/type_Income_ds"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/amount"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@+id/amount_income_ds"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_date"
        android:textAppearance="?android:textAppearanceMedium"
        android:gravity="center"
        android:padding="5dp"
        android:id="@+id/date_income_ds"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        />


</LinearLayout>


</androidx.cardview.widget.CardView>