<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    card_view:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/date_txt_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/test_date"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/type_txt_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/test_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/note_txt_income"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/type_txt_income"
            android:layout_marginEnd="96dp"
            android:layout_marginRight="96dp"
            android:maxLines="2"
            android:text="@string/test_note"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintHorizontal_bias="0.678"
            card_view:layout_constraintStart_toEndOf="@+id/type_txt_income" />

        <TextView
            android:id="@+id/ammount_txt_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/test_income"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/holo_green_light"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>