<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    card_view:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    android:elevation="5dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_date"
                android:layout_marginBottom="2dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/date_txt_expense"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_text"
                android:maxLines="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/type_txt_expense"
                />

            <TextView
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:text="@string/test_note"
                android:maxLines="1"
                android:layout_marginEnd="96dp"
                android:layout_marginRight="96dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_below="@+id/type_txt_expense"
                android:id="@+id/note_txt_expense"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintHorizontal_bias="0.678"
                card_view:layout_constraintStart_toEndOf="@+id/type_txt_expense"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_expense"
                android:textAppearance="?android:textAppearanceSmall"
                android:id="@+id/ammount_txt_expense"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>