<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="5dp"
        android:elevation="10dp"
        android:layout_height="wrap_content">
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admobBannerID">
    </com.google.android.gms.ads.AdView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/income"
                        android:textAppearance="?android:textAppearanceLarge" />

                    <TextView
                        android:id="@+id/income_set_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_income"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@android:color/holo_green_light" />


                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/recycler_income"
                    android:layout_height="160dp">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/expense"
                        android:textAppearance="?android:textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/expense_set_result"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@android:color/holo_red_dark"
                        android:text="@string/test_expense"
                        />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/recycler_expense"
                    android:layout_height="160dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_button"
                android:id="@+id/expense_ft_text"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:background="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginEnd="5dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_Ft_btn"
                android:layout_gravity="bottom|end"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/expense"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_button"
                android:id="@+id/income_ft_text"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:background="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginEnd="5dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_Ft_btn"
                android:layout_gravity="bottom|end"
                app:fabSize="mini"
                app:pressedTranslationZ="12dp"
                android:visibility="invisible"
                android:src="@drawable/income"
                />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:id="@+id/fb_main_plus_btn"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="20dp"
            app:fabSize="normal"
            android:src="@drawable/income"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
